删除没有用的文件

--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,10 @@ screenshot
 .firebase
 
 # mock
-mock/**
+site/mock/**
 
 
 # django
-media/**
-migrations/**
+backen/media/**
+backen/emailbox/migrations/**
 *.pyc
